--- a/frontend/end-to-end-messenger-vue/index.html
+++ b/frontend/end-to-end-messenger-vue/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
   <body>
@@ -11,3 +11,5 @@
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
+
+<img src="/logo.png" alt="logo" />
